<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateDeleteOrder">

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="306dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/phone_num"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <Button
        android:id="@+id/buttonorder1"
        android:layout_width="167dp"
        android:layout_height="47dp"
        android:background="@drawable/btnpa_color"
        android:text="@string/delete1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />


    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="304dp"
        android:layout_height="58dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/location_hint"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <View
        android:id="@+id/view1"
        android:layout_width="413dp"
        android:layout_height="187dp"
        android:background="@drawable/imgaddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="165dp"
        android:layout_height="104dp"
        android:text="@string/your_order_details"
        android:textColor="#ffffff"
        android:textSize="27sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <RadioGroup
        android:id="@+id/grpradio1"
        android:layout_width="343dp"
        android:layout_height="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766">

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/apartment_radio"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/office_radio"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/home_radio"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/date_order"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="130dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/time_order"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <Button
        android:id="@+id/buttonorder2"
        android:layout_width="167dp"
        android:layout_height="47dp"
        android:background="@drawable/btnpa_color"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

</androidx.constraintlayout.widget.ConstraintLayout>